--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "debug": "^4.3.4",
